[tool.poetry]
name = "awsu"
version = "0.1.0"
description = "A simple aws assume role tool."
license = "MIT"
authors = ["Jeffry Angtoni <jeffryangtoni24@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jeffryang24/awsu"
keywords = ["aws", "sts", "awsudo"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
