[tool.poetry]
name = "awsu"
version = "0.1.0"
description = "A simple aws assume role tool."
license = "MIT"
authors = ["Jeffry Angtoni <jeffryangtoni24@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jeffryang24/awsu"
keywords = ["aws", "sts", "awsudo"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"

[tool.black]
line-length = 79

[tool.mypy]
exclude = ["^tests/"]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
